# game-night-decider

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  debug_poll_dummy.py  debug_token.py  fail_log.txt  fix_handlers.py  game_night.db  mypy_output.txt  mypy_output_2.txt  mypy_output_3.txt  pyproject.toml  pytest_final.txt  ruff_output.txt  ruff_remaining.txt  ruff_remaining_2.txt  ruff_remaining_3.txt  ruff_src.txt  session_test_fail.txt  test_bgg_api_debug.py  test_bgg_fetch.py  test_collection_auth.py  test_game_night.db  test_output.txt  test_params.py  test_real_token.py  test_search.py  test_ua.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: db-migrations.md
.github/workflows/: ci.yml  deploy.yml  release.yml
scripts/: add_weighted_column.py  check_complexity.py  fix_db_schema.py  fix_poll_votes_pk.py  fix_schema_priority.py  migrate_custom_poll.py  migrate_game_state.py  migrate_hide_voters.py  migrate_playing_time.py  migrate_session_message_id.py  migrate_vote_limit.py  refresh_complexity.py  sync_bot_config.py  verify_db.py
src/bot/: handlers.py  main.py
src/core/: bgg.py  db.py  logic.py  models.py
tests/: conftest.py  test_bgg.py  test_custom_poll.py  test_handlers.py  test_handlers_game.py  test_handlers_session.py  test_logic.py  test_poll_auto_close.py  test_poll_edge_cases.py  test_priority.py  test_vote_limit.py  test_weighted_votes.py
